# gopro_ros2

./: CMakeLists.txt  README.md  gopro_to_asl.cpp  gopro_to_rosbag.cpp  package.xml
include/: GPMF_mp4reader.h  GPMF_utils.h  ImuExtractor.h  VideoExtractor.h  ros2_compat.h  time_utils.h
launch/: gopro_to_asl.launch  gopro_to_asl.launch.py  gopro_to_rosbag.launch  gopro_to_rosbag.launch.py
scripts/: asl_to_bag.py  bag_to_asl.py  orbtimestamp.py
src/: GPMF_mp4reader.c  GPMF_print.cpp  ImuExtractor.cpp  VideoExtractor.cpp
