<package format="3">
    <name>gopro_ros</name>
    <version>0.0.1</version>
    <description> GoPro Video information extractor. </description>
    <maintainer email="bjoshi@email.sc.edu">Bharat Joshi</maintainer>
    <license>BSD</license>
    <author email="bjoshi@email.sc.edu">Bharat Joshi</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    
    <depend>builtin_interfaces</depend>
    <depend>cv_bridge</depend>
    <depend>geometry_msgs</depend>
    <depend>rclcpp</depend>
    <depend>rclpy</depend>
    <depend>rosbag2_cpp</depend>
    <depend>rosbag2_py</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>

    <exec_depend>ros2launch</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
